WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
142263
<attachment> title text disappears when dragging
https://bugs.webkit.org/show_bug.cgi?id=142263
Summary
<attachment> title text disappears when dragging
Tim Horton
Reported
2015-03-03 23:51:59 PST
<attachment> title text disappears when dragging
Attachments
Patch
(1.77 KB, patch)
2015-03-03 23:52 PST
,
Tim Horton
sam
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Tim Horton
Comment 1
2015-03-03 23:52:39 PST
Created
attachment 247846
[details]
Patch
Radar WebKit Bug Importer
Comment 2
2015-03-03 23:54:01 PST
<
rdar://problem/20035515
>
Tim Horton
Comment 3
2015-03-04 11:34:52 PST
http://trac.webkit.org/changeset/181008
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug